execute the correct binary in the desktop files
Signed-off-by: Klaus Kurzmann <mok@fluxnetz.de>

--- a/data/phoneui-dialer.desktop
+++ b/data/phoneui-dialer.desktop
@@ -4,7 +4,7 @@ Name=Dialer
 Name[pl]=Zadzwoń
 Comment=Telephone Calls
 Comment[pl]=Rozmowy telefoniczne
-Exec=shr-dialer
+Exec=phoneui-dialer
 Icon=shr-dialer
 Terminal=false
 Type=Application
