--- a/data/phoneui-messages.desktop
+++ b/data/phoneui-messages.desktop
@@ -4,7 +4,7 @@ Name=Messages
 Name[pl]=Wiadomości
 Comment=View and send SMS messages
 Comment[pl]=Przeglądaj i wysyłaj wiadomości SMS
-Exec=shr-messages
+Exec=phoneui-messages
 Icon=shr-messages
 Terminal=false
 Type=Application
