--- a/data/phoneui-contacts.desktop
+++ b/data/phoneui-contacts.desktop
@@ -4,7 +4,7 @@ Name=Contacts
 Name[pl]=Kontakty
 Comment=View Contacts
 Comment[pl]=Książka adresowa 
-Exec=shr-contacts
+Exec=phoneui-contacts
 Icon=shr-contacts
 Terminal=false
 Type=Application
