remove superfluous backslash in data/Makefile.am
Signed-off-by: Klaus Kurzmann <mok@fluxnetz.de>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,7 +2,7 @@
 desktopdir = $(datadir)/applications
 dist_desktop_DATA = phoneui-contacts.desktop \
 		    phoneui-messages.desktop \
-		    phoneui-dialer.desktop \
+		    phoneui-dialer.desktop
 
 MAINTAINERCLEANFILES = Makefile.in
 
