--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,7 +2,8 @@
 desktopdir = $(datadir)/applications
 dist_desktop_DATA = phoneui-contacts.desktop \
 		    phoneui-messages.desktop \
-		    phoneui-dialer.desktop
+		    phoneui-dialer.desktop \
+		    phoneui-phonelog.desktop
 
 MAINTAINERCLEANFILES = Makefile.in
 
