--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,11 +8,12 @@ AM_CPPFLAGS = -DPKGDATADIR=\"$(pkgdatadir)\" \
 
 AM_LDFLAGS = @DBUS_LIBS@
 
-bin_PROGRAMS=phoneui-dialer phoneui-contacts phoneui-messages phoneui-quick-settings
+bin_PROGRAMS=phoneui-dialer phoneui-contacts phoneui-messages phoneui-quick-settings phoneui-phonelog
 
 phoneui_contacts_SOURCES = contacts-main.c
 phoneui_messages_SOURCES = messages-main.c
 phoneui_dialer_SOURCES = dialer-main.c
 phoneui_quick_settings_SOURCES = quick-settings-main.c
+phoneui_phonelog_SOURCES = phonelog-main.c
 
         
