finish renaming phonelog to phone-log for consistenci
Signed-off-by: Martin Jansa <Martin.Jansa@gmail.com>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -3,7 +3,7 @@ desktopdir = $(datadir)/applications
 dist_desktop_DATA = phoneui-contacts.desktop \
 		    phoneui-messages.desktop \
 		    phoneui-dialer.desktop \
-		    phoneui-phonelog.desktop
+		    phoneui-phone-log.desktop
 
 MAINTAINERCLEANFILES = Makefile.in
 
