Fix *.desktop files (use fdo standards)
 This patch fixes the *.desktop files as follows:
 .
  * removal of Categories not mentioned by the standard
  * rename SingleInstace to X-MB-SingleInstance
  * shr-phonelog binary is installed as shr-phone-log

Author: Sebastian Reichel <elektranox@gmail.com>
Last-Update: 2010-07-26

Signed-off-by: Lukas Märdian <lukasmaerdian@gmail.com>

--- a/data/phoneui-contacts.desktop
+++ b/data/phoneui-contacts.desktop
@@ -8,6 +8,6 @@ Exec=phoneui-contacts
 Icon=shr-contacts
 Terminal=false
 Type=Application
-Categories=Application;PIM;Office;Bar;
-SingleInstance=true
+Categories=Application;Office;
+X-MB-SingleInstance=true
 StartupNotify=true
