--- a/data/phoneui-dialer.desktop
+++ b/data/phoneui-dialer.desktop
@@ -8,7 +8,7 @@ Exec=phoneui-dialer
 Icon=shr-dialer
 Terminal=false
 Type=Application
-Categories=Application;PIM;Office;Bar;
+Categories=Application;Office;
 MimeType=text/x-vcard;
 X-MB-SingleInstance=true
 StartupNotify=true
