--- a/data/phoneui-messages.desktop
+++ b/data/phoneui-messages.desktop
@@ -8,6 +8,6 @@ Exec=phoneui-messages
 Icon=shr-messages
 Terminal=false
 Type=Application
-Categories=Application;PIM;Office;Bar;
-SingleInstance=true
+Categories=Application;Office;
+X-MB-SingleInstance=true
 StartupNotify=true
