--- a/data/phoneui-phone-log.desktop
+++ b/data/phoneui-phone-log.desktop
@@ -6,6 +6,6 @@ Exec=phoneui-phone-log
 Icon=shr-phone-log
 Terminal=false
 Type=Application
-Categories=Application;PIM;Office;Bar;
-SingleInstance=true
+Categories=Application;Office;
+X-MB-SingleInstance=true
 StartupNotify=true
